@@ -58,3 +58,4 @@
 18-Apr-2020  - V0.58 Add feature to catch specified HTTP error codes in UrlRequestUtil()
 18-Apr-2020  - V0.59 Adjustments for Py27 compatibility
 18-Apr-2020  - V0.60 Further adjustments for Py27 compatibility
+24-Apr-2020  - V0.61 Add return type processing in UrlRequestUtil() and undecorated method entry points.
